# nasdaq

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  nasdaqlisted.txt.csv
.github/workflows/: ci.yml
benches/: replay.rs
csv/: bondslist.txt.csv  nasdaqtraded.txt.csv  otherlisted.txt.csv
examples/: matching_engine.rs  replay_session.rs  symbol_universe.rs
src/: itch.rs  lib.rs  main.rs  orderbook.rs
