[package]
name = "nasdaq"
version = "0.2.0"
edition = "2024"
description = "Nasdaq Trader symbol directory client: tickers, bonds, options + a price-level orderbook"
license = "MIT"
repository = "https://github.com/arthurcolle/nasdaq"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
suppaftp = "6"
thiserror = "2"
ureq = "3"

[profile.release]
lto = "thin"
strip = true
