[package]
name = "nasdaq"
version = "0.3.0"
edition = "2024"
description = "Nasdaq market-structure toolkit: symbol directory client, ITCH 5.0 parser, matching-engine orderbook, book analytics"
license = "MIT"
repository = "https://github.com/arthurcolle/nasdaq"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suppaftp = "6"
thiserror = "2"
ureq = "3"

[profile.release]
lto = "thin"
strip = true
